cider/lab6/autog/11-24.22-10.out

CS:APP Malloc Lab: Grading Sheet for mm-cider.c

Part 1: Compiling the driver

gcc -Wall -O2 -m32   -c -o mdriver.o mdriver.c
mdriver.c: In function ‘remove_range’:
mdriver.c:438:9: warning: variable ‘size’ set but not used [-Wunused-but-set-variable]
     int size;
         ^
gcc -Wall -O2 -m32   -c -o mm.o mm.c
mm.c: In function ‘find_fit’:
mm.c:127:9: warning: unused variable ‘sp’ [-Wunused-variable]
   char *sp = heapStart;                     //start at freeStart then check size and go up to next thing in bp if no fit
         ^
mm.c: In function ‘place’:
mm.c:145:74: warning: assignment makes integer from pointer without a cast [enabled by default]
     *(NEXT_BLKP(bp)) = EoL;
                                                                          ^
mm.c:146:78: warning: assignment makes integer from pointer without a cast [enabled by default]
     *(NEXT_BLKP(bp) + WSIZE) = EoL;
                                                                              ^
mm.c:148:12: warning: dereferencing ‘void *’ pointer [enabled by default]
   else if (*bp == EoL){
            ^
mm.c:148:3: error: void value not ignored as it ought to be
   else if (*bp == EoL){
   ^
mm.c:149:74: warning: dereferencing ‘void *’ pointer [enabled by default]
     *PREV_BLKP(bp) = *bp;
                                                                          ^
mm.c:149:72: error: void value not ignored as it ought to be
     *PREV_BLKP(bp) = *bp;
                                                                        ^
mm.c:151:12: warning: dereferencing ‘void *’ pointer [enabled by default]
   else if (*(bp + WSIZE) == EoL){
            ^
mm.c:151:3: error: void value not ignored as it ought to be
   else if (*(bp + WSIZE) == EoL){
   ^
mm.c:152:80: warning: dereferencing ‘void *’ pointer [enabled by default]
     *(NEXT_BLKP(bp) + WSIZE) = *bp + WSIZE;
                                                                                ^
mm.c:152:5: error: void value not ignored as it ought to be
     *(NEXT_BLKP(bp) + WSIZE) = *bp + WSIZE;
     ^
mm.c:156:74: warning: dereferencing ‘void *’ pointer [enabled by default]
     *PREV_BLKP(bp) = *bp;
                                                                          ^
mm.c:156:72: error: void value not ignored as it ought to be
     *PREV_BLKP(bp) = *bp;
                                                                        ^
mm.c:157:80: warning: dereferencing ‘void *’ pointer [enabled by default]
     *(NEXT_BLKP(bp) + WSIZE) = *bp + WSIZE;
                                                                                ^
mm.c:157:5: error: void value not ignored as it ought to be
     *(NEXT_BLKP(bp) + WSIZE) = *bp + WSIZE;
     ^
mm.c:139:9: warning: unused variable ‘pHOLD’ [-Wunused-variable]
   char *pHOLD;
         ^
mm.c: In function ‘mm_malloc’:
mm.c:178:29: error: expected declaration specifiers before numeric constant
 void *mm_malloc(size_t size)3
                             ^
mm.c:210:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
mm.c:230:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
mm.c:241:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
mm.c:269:1: error: expected ‘{’ at end of input
 }
 ^
mm.c: At top level:
mm.c:73:14: warning: ‘mm_coalesce’ used but never defined [enabled by default]
 static void *mm_coalesce(void *ptr);
              ^
mm.c: In function ‘find_fit’:
mm.c:133:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
mm.c: In function ‘mm_malloc’:
mm.c:269:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [mm.o] Error 1
grade-malloclab.pl: ERROR: Unable to compile mdriver. The files are in /tmp/mm-cider.c.29383.
